--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta http-equiv="Content-Type" Content="text/html;charset=UTF-8">
         <meta http-equiv="Content-Script-Type" content="text/javascript">
         <meta name="description" content="regular expressions checker javascript and jQuery tool. free. replace ok" />
-        <meta name="keywords" content="regular expressions,regexp,$B@55,I=8=(B,javascript,jQuery" />
+        <meta name="keywords" content="regular expressions,regexp,正規表現,javascript,jQuery" />
         <title>RegExpChecker.js</title>
         <link rel="stylesheet" href="css/style.css" type="text/css" media="screen"/> 
         <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.3/jquery.min.js"></script>
